[package]
name = "dicom-node-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Thales Matheus <133025183+ThalesMMS@users.noreply.github.com>"]
description = "Terminal-first DICOM node client built with dicom-rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ThalesMMS/rusty-dicom-node"
homepage = "https://github.com/ThalesMMS/rusty-dicom-node"
readme = "README.md"
keywords = ["dicom", "medical-imaging", "pacs", "networking", "tui"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
directories = "5"
ratatui = "0.30"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shell-words = "1.1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unicode-segmentation = "1"
unicode-width = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
zip = "2"

dicom-core = "0.9.1"
dicom-dictionary-std = "0.9.0"
dicom-encoding = "0.9.1"
dicom-object = "0.9.1"
dicom-transfer-syntax-registry = "0.9.0"
dicom-ul = "0.9.1"

[dev-dependencies]
tempfile = "3"
